se agregan ejemplos de herencia y mixins

--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
         <a href="">Contacto</a>
         <a href="">Nosotros</a>
     </nav>
+
+    <section>
+        <div class="container-sm">Hola mundo 01</div>
+        <div class="container-md">Hola mundo 02</div>
+        <div class="container-lg">Hola mundo 03</div>
+    </section>
+
+
+
+
+
+    <section>
+        <div class="button-warning">WARNING</div>
+        <button class="button-save">SAVE</button>
+    </section>
 </body>
 </html>
