circulo de estudio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="">Nosotros</a>
     </nav>
 
-    <section>
+    <!-- <section>
         <div class="container-sm">Hola mundo 01</div>
         <div class="container-md">Hola mundo 02</div>
         <div class="container-lg">Hola mundo 03</div>
@@ -27,6 +27,23 @@
     <section>
         <div class="button-warning">WARNING</div>
         <button class="button-save">SAVE</button>
-    </section>
+    </section> -->
+
+    <!-- <div class="container container-sm container-md container-lg">
+        <h1>Hola mundo!</h1>
+    </div> -->
+
+    <div class="card">
+        <h2>Huawei</h2>
+        <p>
+            I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.
+        </p>
+        <hr>
+
+        <div>
+            <a href="">THIS IS A LINK</a>
+            <a href="">THIS IS A LINK</a> 
+        </div>
+    </div> 
 </body>
 </html>
